2002-09-22  Peter Osterlund  <petero2@telia.com>

	* (p4-print-with-rev-history-int): Fixed misaligned header text.

	* (p4-print-rev-map): Add 'l' key to toggle line wrap mode.
	* (p4-print-with-rev-history-int): Default to line wrap mode off.
	* (p4-toggle-line-wrap): New function to toggle line wrap mode.

	* (p4-print-with-rev-history-int): Colorize the buffer contents
	  using font-lock mode.
	* (p4-insert-no-properties): New function.

	* (p4-resolve): If you switched directory to a different depot,
	  p4-resolve didn't work until you manually killed the
	  *p4 resolve* buffer.

	* (p4-print-with-rev-history-int): Tiny optimization. Only compute
	  variable values if they are going to be used.

2002-09-07  Peter Osterlund  <petero2@telia.com>

	* (p4-print-with-rev-history-int): Truncate long user names.

2002-08-29  Peter Osterlund  <petero2@telia.com>

	* (p4-toggle-read-only): Updated docstring to match new "C-xC-q"
	  handling from 2002-08-25.

	* (p4-print-with-rev-history-int): Fixed regexp to work with long
	  user names.

	* (p4-next-change-rev-line, p4-prev-change-rev-line): Fix to work
	  with new format of print-with-rev-history buffers.

	* (p4-moveto-print-rev-column): New function.

	* (p4-print-with-rev-history-int): Removed debug message. Made the
	  number of added characters a multiple of 8 to avoid messing up
	  indentation for lines containing tabs.

2002-08-28  Peter Osterlund  <petero2@telia.com>

	* (p4-print-with-rev-history-int): Declare local variable cur-list.
	* (p4-blame): Fixed typo.

2002-08-25  Peter Osterlund  <petero2@telia.com>

	Handle "C-xC-q" using a minor mode keymap instead of modifying the
	global map. This lets p4.el coexist happily with "vc" without
	special hacks.
	* (p4-minor-map): New keymap.
	* (p4-async-minor-mode): Renamed from p4-minor-mode.
	* (p4-require-vc-p, p4-prev-toggle-fkn,
	  substitute-key-definition): Removed.

2002-08-24  Peter Osterlund  <petero2@telia.com>
